<resources>
    <string name="title_activity_compose">ComposeActivity</string>

    <string name="content_title">Content title</string>
    <string name="content_text">Content text</string>
    <string name="subtext">Sub text</string>
    <string name="send_notification">Send Notification</string>
    <string name="text_show_notif">Testing Notif With Reply</string>
    <string name="notif_action_reply">Reply Notif</string>
    <string name="notif_title">New Notification</string>
    <string name="notif_content">Ada notif baru</string>
    <string name="notif_title_sent">Reply Sent</string>
    <string name="notif_content_sent">Message has been sent</string>
    <string name="hint_reply">Insert reply message</string>
    <string name="hint_sender">Insert sender name</string>
    <string name="hint_message">Insert message</string>
    <string name="send">Send</string>
    <string name="navigate_custom">Go to custom notif</string>
    <string name="navigate_stack">Go to stack notif</string>
    <string name="send_custom_notification">Send Custom Layout Notification</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="app_description">An Android library that prevents your app from being pirated / cracked using Google Play Licensing (LVL), signing certificate protection and more.</string>

    <string name="action_about">About</string>
    <string name="section_utils">Utils</string>
    <string name="section_display">Show Dialog or Activity</string>

    <string name="radio_dialog">Dialog</string>
    <string name="radio_activity">Activity</string>

    <string name="verify_signature">Verify using the APK signature</string>
    <string name="read_signature">Read APK signature</string>
    <string name="verify_installer_id">Verify using the Installer ID</string>
    <string name="verify_unauthorized_apps">Verify unauthorized apps: Lucky Patcher, Freedom, CreeHack and HappyMod</string>
    <string name="verify_stores">Verify third-party stores: Aptoide, BlackMart, 1Mobile, GetApk, etc</string>
    <string name="verify_debug">Verify if app is a debug build</string>
    <string name="verify_emulator">Verify if app is being run in an emulator</string>

    <string name="title_tv">TV Show</string>
    <string name="title_movie">Movie</string>
    <string name="title_person">Person</string>

    <string name="title_day">Day</string>
    <string name="title_week">Week</string>

    <string name="title_activity_recycler_compose">RecyclerComposeActivity</string>

    <string name="about_frogobox">Frogobox Software Industry</string>
    <string name="title_about_us">toolbar_about_us</string>
    <string name="dummyLong">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam veniam similiquevoluptates odit, ipsum laborum architecto distinctio harum, provident fugiat praesentium ex quod doloreslaudantium aliquid quidem placeat incidunt vitae!</string>
    <string name="dummy">Dummy</string>
    <string name="title_activity_main">MainActivity</string>
</resources>